# ERC-hackathon-2023-hackdogs

./: README.md
reports/: Atul.md  Druva.md
robotics_hackathon_automation/: CMakeLists.txt  package.xml
robotics_hackathon_automation/launch/: automation_task.launch
robotics_hackathon_automation/src/: colour_detection.py  controller.py  djikstra.py  generate_grid.py  new_controller.py  obstacle_detection.py  path_planner.py
robotics_hackathon_automation/src/helpers/: __init__.py  djikstra.py  graphs.py
simulation/: full_logs.txt
